# numpyro-ext

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  pyproject.toml.rej  setup.py
.github/workflows/: tests.yml
src/numpyro_ext/: __init__.py  distributions.py  infer.py  info.py  linear.py  linear_op.py  optim.py
tests/: test_distributions.py  test_infer.py  test_info.py  test_linear_op.py  test_numpyro_ext.py  test_optim.py
